--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,21 @@
       "name": "Joost Faassen",
       "email": "j.faassen@linkorb.com",
       "role": "Development"
+    },
+    {
+      "name": "René Welbers",
+      "email": "info@wereco.de",
+      "role": "Development"
     }
   ],
   "require": {
-    "php": ">=5.3.0",
-    "sarciszewski/php-future": "^0.4.2"
+    "php": ">=7.4.0",
+    "ext-soap": "*",
+    "ext-dom": "*",
+    "ext-openssl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.*"
+    "phpunit/phpunit": "^8.5 || ^9.5"
   },
   "autoload": {
     "psr-0": {
