--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "linkorb/buckaroo",
-  "description": "Buckaroo BPE3 API client for PHP. PSR-0 Compliant.",
-  "homepage": "http://www.github.com/linkorb/buckaroo",
+  "name": "silentgecko/buckaroo",
+  "description": "Buckaroo BPE3 API client for PHP. PSR-4 Compatible.",
+  "homepage": "http://www.github.com/silentgecko/buckaroo",
   "keywords": [
     "php",
     "api",
@@ -12,13 +12,13 @@
   "type": "library",
   "authors": [
     {
-      "name": "Joost Faassen",
-      "email": "j.faassen@linkorb.com",
+      "name": "René Welbers",
+      "email": "info@wereco.de",
       "role": "Development"
     },
     {
-      "name": "René Welbers",
-      "email": "info@wereco.de",
+      "name": "Joost Faassen",
+      "email": "j.faassen@linkorb.com",
       "role": "Development"
     }
   ],
@@ -28,12 +28,9 @@
     "ext-dom": "*",
     "ext-openssl": "*"
   },
-  "require-dev": {
-    "phpunit/phpunit": "^8.5 || ^9.5"
-  },
   "autoload": {
-    "psr-0": {
-      "LinkORB\\Buckaroo\\": "src/"
+    "psr-4": {
+      "silentgecko\\Buckaroo\\": "src/"
     }
   },
   "license": "MIT"
