--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     }
   ],
   "require": {
-    "php": ">=7.4.0",
+    "php": "^7.4 || ^8.0",
     "ext-soap": "*",
     "ext-dom": "*",
     "ext-openssl": "*"
@@ -33,5 +33,9 @@
       "silentgecko\\Buckaroo\\": "src/"
     }
   },
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "phpcs": "phpcs --standard=PSR12 src",
+    "phpcbf": "phpcbf --standard=PSR12 src"
+  }
 }
